--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,4 +4,8 @@
     <string name="most_popular_movies">Most Popular Movies</string>
     <string name="most_popular_series">Most Popular Series</string>
     <string name="coming_soon">Coming Soon</string>
+    <string name="date_of_birth">Date Of Birth: %s</string>
+    <string name="awards">Awards: %s</string>
+    <string name="height">Height:</string>
+    <string name="cast_movies">Cast Movies</string>
 </resources>
