--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,8 @@
     <string name="awards">Награды: %s</string>
     <string name="height">Рост:</string>
     <string name="cast_movies">Фмльмография</string>
+    <string name="home">Home</string>
+    <string name="menu_search">Search</string>
+    <string name="favourite">Favourite</string>
+    <string name="top250">Top 250</string>
 </resources>
