--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="awards">Awards: %s</string>
     <string name="height">Height:</string>
     <string name="cast_movies">Cast Movies</string>
+    <string name="home">Home</string>
+    <string name="menu_search">Search</string>
+    <string name="favourite">Favourite</string>
+    <string name="top250">Top 250</string>
 </resources>
