--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,4 +15,8 @@
     <string name="top250">Top 250</string>
     <string name="top_250_movies">Топ-250 Фильмы</string>
     <string name="top_250_tv_series">Tоп-250 Сериалы</string>
+    <string name="released_date">Released Date</string>
+    <string name="genres">Genres:</string>
+    <string name="director">Director:</string>
+    <string name="runtime">Runtime:</string>
 </resources>
