--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,7 +8,7 @@
     <string name="date_of_birth">Дата рождения: %s</string>
     <string name="awards">Награды: %s</string>
     <string name="height">Рост:</string>
-    <string name="cast_movies">Фмльмография</string>
+    <string name="known_for_movies">Известные фильмы</string>
     <string name="home">Home</string>
     <string name="menu_search">Search</string>
     <string name="favourite">Favourite</string>
@@ -19,4 +19,6 @@
     <string name="genres">Genres:</string>
     <string name="director">Director:</string>
     <string name="runtime">Runtime:</string>
+    <string name="slash">/</string>
+    <string name="all_films_title">All films:</string>
 </resources>
