--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">MoviePagination</string>
     <string name="cast_title">Cast</string>
-    <string name="now_in_theatres">Now in theatres</string>
+    <string name="now_in_theatres">In theatres</string>
     <string name="most_popular_movies">Most Popular Movies</string>
     <string name="most_popular_series">Most Popular Series</string>
     <string name="coming_soon">Coming Soon</string>
