--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -25,4 +25,5 @@
     <string name="success_saved">Фильм сохранен</string>
     <string name="success_deleted">Фильм удален</string>
     <string name="no_data">no data</string>
+    <string name="query_hint_search_view">Поиск фильма / Сериала</string>
 </resources>
