--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,4 +26,5 @@
     <string name="success_deleted">Фильм удален</string>
     <string name="no_data">no data</string>
     <string name="query_hint_search_view">Поиск фильма / Сериала</string>
+    <string name="no_favourite_movies_or_tv_shows">Нет добавленных фильмов/сериалов в Избранное</string>
 </resources>
