--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,8 +4,8 @@
     <string name="most_popular_movies">Most Popular Movies</string>
     <string name="most_popular_series">Most Popular Series</string>
     <string name="coming_soon">Coming Soon</string>
-    <string name="date_of_birth">Date Of Birth: %s</string>
-    <string name="awards">Awards: %s</string>
+    <string name="date_of_birth">Date Of Birth:</string>
+    <string name="awards">Awards:</string>
     <string name="height">Height:</string>
     <string name="known_for_movies">Famous movies</string>
     <string name="home">Home</string>
