--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="most_popular_movies">Most Popular Movies</string>
     <string name="most_popular_series">Most Popular Series</string>
     <string name="coming_soon">Coming Soon</string>
-    <string name="date_of_birth">Date Of Birth: %s</string>
-    <string name="awards">Awards: %s</string>
-    <string name="height">Height: %s</string>
+    <string name="date_of_birth">Date Of Birth:</string>
+    <string name="awards">Awards:</string>
+    <string name="height">Height:</string>
     <string name="known_for_movies">Famous Movies</string>
     <string name="home">Home</string>
     <string name="menu_search">Search</string>
