--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -27,4 +27,6 @@
     <string name="query_hint_search_view">Search movie/TV show here</string>
     <string name="no_favourite_movies_or_tv_shows">No favourite movies or TV shows.</string>
     <string name="error">Error:</string>
+    <string name="retry">Retry</string>
+    <string name="no_internet_error">Check your Internet connection</string>
 </resources>
